tests/paczka1/small_fuzzy/92383451.err
Error in line 6: 2SpU5 S5 66,1
Error in line 4: S463 A935 81,3
Error in line 1: 3lWHDJeU4 S245 24,0
